# book-publishing-cursor

./: .gitignore  README.md  놀이문화 책
.cursor/rules/: book-assets.mdc  notebooklm-research.mdc
.cursor/skills/book-writing/: SKILL.md
.cursor/skills/book-writing/references/: memoir-guide.md  proposal-template.md  self-publishing.md  theological-book.md
manuscript/: EVALUATION.md  outline-집단놀이치료-가이드.md  outline.md
manuscript/assets/: IMAGE-MANIFEST.active.csv  IMAGE-MANIFEST.template.csv  README.md
manuscript/chapters/: 00-프롤로그.md  01-1장-문제행동은-마음의-언어.md  README.md
manuscript/research/notebook-lm/: 00-index.md  README.md
manuscript/research/notebook-lm/exports/: 놀이_목회_정서돌봄_교육매뉴얼_완성원고초안.md
manuscript/research/prompts/: Gems-집단놀이치료-가이드-시스템지시및기획.md
manuscript/snippets/: eval-template.md
tools/consensus_cli/: .env.example  README.md  pyproject.toml  requirements.txt
tools/consensus_cli/consensus_cli/: __init__.py  __main__.py  config.py  engine.py  jsonutil.py  providers.py
tools/consensus_cli/scripts/: check-api-env.sh  evaluate-passage.sh  reset-api-env.sh
